--- a/HTML_040_prellex/css/main_nav.css
+++ b/HTML_040_prellex/css/main_nav.css
@@ -1,6 +1,6 @@
 nav#main_nav {
   position: fixed;
-  background-color: green;
+  background-color: black;
   top: 0;
   left: 0;
   width: 100%;
@@ -8,22 +8,23 @@ nav#main_nav {
 }
 nav#main_nav h1 {
   font-size: 40px;
-  color: ghostwhite;
+  color: black;
   font-weight: 900;
+  text-shadow: 1px 1px 1px goldenrod;
 }
 nav#main_nav ul {
   /* contanmier를 flex로 하고 child의 margin-left를 auto로 설정하면 flex box내에서 오른쪽 정렬이된다 */
   margin-left: auto;
   list-style: none;
   display: flex;
-  color: ghostwhite;
+  color: goldenrod;
 }
 nav#main_nav li {
   padding: 22px 15px 20px 15px;
   cursor: pointer;
 }
 nav#main_nav li.active {
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid goldenrod;
   background-color: rgba(0, 0, 0, 0.3);
 }
 nav#main_nav li:hover {
