--- a/HTML_040_prellex/css/main_nav.css
+++ b/HTML_040_prellex/css/main_nav.css
@@ -12,6 +12,9 @@ nav#main_nav h1 {
   font-weight: 900;
   text-shadow: 1px 1px 1px goldenrod;
 }
+nav#main_nav div {
+  margin-left: auto;
+}
 nav#main_nav ul {
   /* contanmier를 flex로 하고 child의 margin-left를 auto로 설정하면 flex box내에서 오른쪽 정렬이된다 */
   margin-left: auto;
@@ -29,4 +32,16 @@ nav#main_nav li.active {
 }
 nav#main_nav li:hover {
   background-color: rgba(0, 0, 0, 0.3);
+}
+nav#main_nav div.menu_toggle {
+  width: 100%;
+  padding: 22px;
+  text-align: right;
+  color: white;
+  font-size: 20px;
+  display: none;
+}
+nav#main_nav ul.drop {
+  visibility: visible;
+  height: 50vh;
 }
